--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -36,7 +36,7 @@ header {
     ul {
       position: absolute;
       top: 50%;
-      right: 0;
+      right: 20px;
       transform: translateY(-50%);
 
       li {
