--- a/src/styles/layer.scss
+++ b/src/styles/layer.scss
@@ -1,11 +1,29 @@
 @charset "UTF-8";
 
-.layer {
+.loading {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 90%;
   transform: translate(-50%, -50%);
+
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    animation: 3s linear 0s infinite loading;
+    background: url('../images/loading.png') no-repeat center / contain;
+  }
+
+  @keyframes loading {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
   &-popup {
     position: fixed;
@@ -14,7 +32,7 @@
     width: 100%;
     height: 100%;
 
-    #dim {
+    .dim {
       display: block;
       position: fixed;
       top: 0;
@@ -25,9 +43,5 @@
     }
   }
 
-  &-contents {
-    padding: 20px;
-    background-color: #fff;
-  }
 
 }
