회원정보 및 수정 API 적용

--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -231,11 +231,13 @@ header {
   &-file {
     background-color: #0076be;
     color: #fff;
+    cursor: pointer;
   }
 
   &-cancel {
     background-color: #838383;
     color: #fff;
+    cursor: pointer;
   }
 
   &-arrow {
