--- a/src/styles/layer.scss
+++ b/src/styles/layer.scss
@@ -4,7 +4,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);  
 
   &::after {
     content: '';
@@ -31,7 +31,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-
+    display: none;
+    
     .dim {
       display: block;
       position: fixed;
