--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -317,7 +317,7 @@ header {
       text-align: left;
 
       input[type="text"], input[type="password"] {
-        min-width: 300px;
+        min-width: 100%;
       }
     }
 
